# python-for-data-and-actuarial-science

./: README.md  pyproject.toml  python_for_actuaries.ipynb
