[project]
name = "intro-to-python-for-actuarial-science"
version = "0.1.0"
description = "An introductory Python notebook for actuarial science interns covering data manipulation, visualisation, and claim frequency modelling with the freMTPL2 dataset."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
